# Abstraction

./: .gitignore  CMakeLists.txt  calculating_hs.py  calculating_hs_flop.py  calculating_hs_turn.py  find_canonical_hands.py  install.sh  kmeans_emd.py  make_numpy_data.py
handIndex/: CMakeLists.txt  index.cpp
handRank/: CMakeLists.txt  rank_hand.cpp
